update and fix bug
