# docs/swagger.json
@@ -1045,7 +1045,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/order.CreateOrderRequset"
+                            "$ref": "#/definitions/order.CreateOrderRequest"
                         }
                     }
                 ],
@@ -1457,7 +1457,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.UpdateUserRequest"
+                            "$ref": "#/definitions/user.UpdateOwnUserRequest"
                         }
                     }
                 ],
@@ -1670,29 +1670,6 @@
                 }
             }
         },
-        "models.OrderItem": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "order_id": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "number"
-                },
-                "product_id": {
-                    "type": "string"
-                },
-                "quantity": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.Product": {
             "type": "object",
             "properties": {
@@ -1771,19 +1748,34 @@
                 }
             }
         },
-        "order.CreateOrderRequset": {
+        "order.CreateOrderItemRequest": {
+            "type": "object",
+            "required": [
+                "product_id",
+                "quantity"
+            ],
+            "properties": {
+                "product_id": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer",
+                    "minimum": 1
+                }
+            }
+        },
+        "order.CreateOrderRequest": {
             "type": "object",
             "required": [
                 "items",
                 "payment_method",
-                "shipping_adress",
-                "user_id"
+                "shipping_address"
             ],
             "properties": {
                 "items": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.OrderItem"
+                        "$ref": "#/definitions/order.CreateOrderItemRequest"
                     }
                 },
                 "payment_method": {
@@ -1793,11 +1785,8 @@
                         "cash"
                     ]
                 },
-                "shipping_adress": {
+                "shipping_address": {
                     "$ref": "#/definitions/models.ShippingAddress"
-                },
-                "user_id": {
-                    "type": "string"
                 }
             }
         },
@@ -1909,6 +1898,29 @@
                 "stock": {
                     "type": "integer",
                     "minimum": 0
+                }
+            }
+        },
+        "user.UpdateOwnUserRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 2
+                },
+                "last_name": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 2
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 6
                 }
             }
         },
